--- a/templates/register_success.html
+++ b/templates/register_success.html
@@ -5,7 +5,7 @@
 <h2>Registration success!</h2>
 
 <p>
-    <a href="/django_auth/login">Login</a>
+    Check your email to activate your account.
 </p>
 
 {% endblock %}
