--- a/templates/login_register.html
+++ b/templates/login_register.html
@@ -2,6 +2,9 @@
 
 {% block content %}
 
+{% if form.errors %}
+  <p class="error">Sorry, that's not a valid username or password</p>
+{% endif %}
 <div class="logmod">
   <div class="logmod__wrapper">
     <div class="logmod__container">
@@ -15,11 +18,12 @@
           <span class="logmod__heading-subtitle">Enter your personal details <strong>to create an acount</strong></span>
         </div>
         <div class="logmod__form">
-          <form accept-charset="utf-8" action="#" class="simform">
+          <form action="/django_auth/auth/" method="post">{% csrf_token %}
             <div class="sminputs">
               <div class="input full">
                 <label class="string optional" for="user-email">Email*</label>
                 <input class="string optional" maxlength="255" id="user-email" placeholder="Email" type="email" size="50" />
+                <input class="string optional" type="text" name="username" value="" id="username" size="50" placeholder="Username">
               </div>
             </div>
             <div class="sminputs">
@@ -55,14 +59,14 @@
           <form accept-charset="utf-8" action="#" class="simform">
             <div class="sminputs">
               <div class="input full">
-                <label class="string optional" for="user-email">Email*</label>
-                <input class="string optional" maxlength="255" id="user-email" placeholder="Email" type="email" size="50" />
+                <label class="string optional" for="username">Username*</label>
+                <input class="string optional" type="text" name="username" value="" id="username" size="50" placeholder="Username">
               </div>
             </div>
             <div class="sminputs">
               <div class="input full">
                 <label class="string optional" for="user-pw">Password *</label>
-                <input class="string optional" maxlength="255" id="user-pw" placeholder="Password" type="password" size="50" />
+                <input class="string optional" maxlength="255" id="user-pw" placeholder="Password" type="password" size="50" name="password" />
                 						<span class="hide-password">Show</span>
               </div>
             </div>
