modifications for having reg and login on same page

--- a/templates/logout.html
+++ b/templates/logout.html
@@ -5,7 +5,7 @@
 <h2>You've been logged out!</h2>
 
 <p>
-    <a href="/django_auth/login">Log in again.</a>
+    <a href="/django_auth">Log in again.</a>
 </p>
 
 {% endblock %}
