--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
 
-    <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+    <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
@@ -16,7 +16,7 @@
   <body>
     {% block content %}{% endblock content %}
 
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="{% static 'js/index.js' %}"></script>
 
   </body>
