--- a/templates/login_register.html
+++ b/templates/login_register.html
@@ -39,6 +39,11 @@
                 <input class="string optional" maxlength="255" placeholder="Password" size="50" id="id_password2" name="password2" type="password"/>
 
               </div>
+
+              <div class="input full">
+                <label class="string optional" for="id_phone">Phone Number*</label>
+                <input id="id_phone" maxlength="30" name="phone" type="text" placeholder="Your mobile number"/>
+              </div>
             </div>
         </div>
           <div class="logmod__alter">
