fix confirm url to accept activation key param

--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -5,7 +5,8 @@
 <h2>Email confirmed!</h2>
 
 <p>
-    <a href="/django_auth/login">Login</a>
+    An SMS has been sent to your phone number {{phone}}. Enter the code below to complete the sign up process.
+
 </p>
 
 {% endblock %}
