--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -3,10 +3,37 @@
 {% block content %}
 
 <h2>Email confirmed!</h2>
+<div class="logmod">
+  <div class="logmod__wrapper">
+    <div class="logmod__container">
+      <div class="logmod__tab-wrapper">
+      <div class="logmod__tab lgm-1">
+        <div class="logmod__heading">
+          <span class="logmod__heading-subtitle">An SMS has been sent to your phone number {{phone}}. Enter the code below to complete the sign up process.</span>
+             {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+        </div>
+        <form action="/django_auth/confirm_reg_code/" method="post">{% csrf_token %}
+        <div class="logmod__form">
+            <div class="sminputs">
 
-<p>
-    An SMS has been sent to your phone number {{phone}}. Enter the code below to complete the sign up process.
+              <div class="input full">
+                <label class="string optional" for="confirm_code">Confirmation code</label>
+                <input id="confirm_code" maxlength="30" name="confirm_code" type="text" placeholder="Enter the confirmation code sent to you by SMS"/>
+              </div>
 
-</p>
-
+            </div>
+        </div>
+          <div class="logmod__alter">
+          <div class="logmod__alter-container">
+              <div class="connect__context">
+                <input type="submit" value="Submit"  class="connect googleplus"/>
+              </div>
+          </div>
+        </div>
+          </form>
+      </div>
+      </div>
+    </div>
+  </div>
+    </div>
 {% endblock %}
