fix confirm code box

--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -2,10 +2,12 @@
 
 {% block content %}
 
-<h2>Email confirmed!</h2>
 <div class="logmod">
   <div class="logmod__wrapper">
     <div class="logmod__container">
+      <ul class="logmod__tabs">
+        <li data-tabtar="lgm-1"><a href="#">Email confirmed!</a></li>
+      </ul>
       <div class="logmod__tab-wrapper">
       <div class="logmod__tab lgm-1">
         <div class="logmod__heading">
