handle sms confirmation

--- a/templates/invalid_code.html
+++ b/templates/invalid_code.html
@@ -5,7 +5,7 @@
 <h2>Invalid code</h2>
 
 <p>
-    The confirmation code has expired. Please<a href="/django_auth"> try again!</a>
+    The confirmation code is invalid. Please<a href="/django_auth"> try again!</a>
 </p>
 
 {% endblock %}
