--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
 
-    <title>Django Auth</title>
+    <title>{{ page_title }} | Django Auth</title>
 
     {% load static %}
 
