--- a/templates/base_login.html
+++ b/templates/base_login.html
@@ -19,16 +19,11 @@
   </head>
 
   <body>
-<div class="widget effect">
+    <div id="body_wrapper">
+      {% block content %}
 
-  <div class="block-content">
-  {% block content %}
-
-  {% endblock content %}
+      {% endblock content %}
     </div>
-
-</div>
-
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src="{% static 'js/index.js' %}"></script>
   </body>
