--- a/templates/base_profile.html
+++ b/templates/base_profile.html
@@ -20,13 +20,21 @@
 
   <body>
 <div class="widget effect">
-
+  <ul>
+    <li>Menu 1</li>
+    <li>Menu 2</li>
+    <li>Menu 3</li>
+    <li>Menu 4</li>
+  </ul>
   <div class="block-content">
   {% block content %}
 
   {% endblock content %}
     </div>
-
+  <div class="avatar"><img src="http://maxme-life.ru/tests/prof_pic.jpg" /></div>
+  <div class="desc">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ante est, condimentum eget commodo non, bibendum sed dolor.
+  </div>
 </div>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
