--- a/templates/login_register.html
+++ b/templates/login_register.html
@@ -57,6 +57,13 @@
       </div>
       <div class="logmod__tab lgm-2">
         <div class="logmod__heading">
+          {% if form.non_field_errors %}
+              <ul class='form-errors'>
+                  {% for error in form.non_field_errors %}
+                      <li>{{ error }}</li>
+                  {% endfor %}
+              </ul>
+          {% endif %}
           <span class="logmod__heading-subtitle">Enter your email and password <strong>to sign in</strong></span><br />
           {{confirmed}}
         </div>
