--- a/templates/no_user.html
+++ b/templates/no_user.html
@@ -5,7 +5,7 @@
 <h2>User not found</h2>
 
 <p>
-    Their is no user with those details. Please<a href="/django_auth"> try again!</a>
+    Their is no user with those details. Please<a href="{% url 'django_auth' %}"> try again!</a>
 </p>
 
 {% endblock %}
