--- a/templates/invalid.html
+++ b/templates/invalid.html
@@ -5,7 +5,7 @@
 <h2>Invalid log in details</h2>
 
 <p>
-    <a href="/django_auth">Try again!</a>
+    <a href="{% url 'django_auth' %}">Try again!</a>
 </p>
 
 {% endblock %}
