--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
         <p class="error">Sorry, that's not a valid username or password</p>
     {% endif %}
 
-    <form action="/django_auth/auth/" method="post">{% csrf_token %}
+    <form action="{% url 'django_auth.auth' %}" method="post">{% csrf_token %}
        <label for="username">User name:</label>
         <input type="text" name="username" value="" id="username">
         <label for="password">Password:</label>
