--- a/templates/login_register.html
+++ b/templates/login_register.html
@@ -17,7 +17,7 @@
         <div class="logmod__heading">
           <span class="logmod__heading-subtitle">Enter your personal details <strong>to create an acount</strong></span>
         </div>
-        <form action="/django_auth/register/" method="post">{% csrf_token %}
+        <form action="{% url 'django_auth.register' %}" method="post">{% csrf_token %}
         <div class="logmod__form">
             <div class="sminputs">
               <div class="input full">
@@ -67,7 +67,7 @@
           <span class="logmod__heading-subtitle">Enter your email and password <strong>to sign in</strong></span><br />
           {{confirmed}}
         </div>
-          <form action="/django_auth/auth/" method="post">{% csrf_token %}
+          <form action="{% url 'django_auth.auth' %}" method="post">{% csrf_token %}
         <div class="logmod__form">
             <div class="sminputs">
               <div class="input full">
