--- a/templates/register_success.html
+++ b/templates/register_success.html
@@ -1,11 +1,13 @@
-{% extends "base.html" %}
+{% extends "site_base.html" %}
 
-{% block content %}
+{% block body %}
 
+<div class="text-center">
 <h2>Registration success!</h2>
 
 <p>
     Check your email to activate your account.
 </p>
+</div>
 
 {% endblock %}
