--- a/templates/base_login.html
+++ b/templates/base_login.html
@@ -9,13 +9,8 @@
 
     {% load static %}
 
-    <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
-
-    <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
-
+    <link rel='stylesheet prefetch' href='https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css'>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'css/page.css' %}">
-
   </head>
 
   <body>
@@ -24,8 +19,9 @@
 
       {% endblock content %}
     </div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-  <script src="{% static 'js/index.js' %}"></script>
+  <script src='https://code.jquery.com/jquery-3.2.1.slim.min.js'></script>
+  <script src="https://getbootstrap.com/docs/4.0/dist/js/bootstrap.min.js"></script>
+
   </body>
 
 </html>
