--- a/templates/login_register.html
+++ b/templates/login_register.html
@@ -57,7 +57,11 @@
                     </label>
                 </div>
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-                <p class="mt-5 mb-3 text-center">Don't have account yet? <a onclick="showRegister()">Register</a></p>
+                <p class="mt-5 mb-3 text-center">
+                    Don't have account yet? <a onclick="showRegister()">Register</a>
+                        <br/>
+                    <a href="{% url 'password_reset' %}">Forgot Password?</a>
+                </p>
             </form>
 
         </div>
